# Gold-Price-Tracker

./: .gitignore  GoldTracker.spec  LICENSE  README.md  build_entry.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
gold_tracker/: __init__.py  __main__.py  app.py  config.py  logging_config.py  models.py
gold_tracker/core/: __init__.py  app_workers.py
gold_tracker/services/: __init__.py  excel_handler.py  price_fetcher.py
gold_tracker/ui/: __init__.py  app_shell.py  components.py  dashboard_view.py  history_window.py  profit_calculator_window.py
installer/: GoldTracker.iss  README.md
