[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gold-tracker"
version = "1.0.0"
description = "Desktop application to track live gold prices in Egyptian Pounds (EGP)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Marwan Mobarak" },
]
dependencies = [
    "selenium==4.43.0",
    "webdriver-manager==4.0.2",
    "requests==2.33.1",
    "yfinance==1.3.0",
    "pandas==3.0.2",
    "matplotlib==3.10.8",
    "openpyxl==3.1.5",
]

[project.scripts]
gold-tracker = "gold_tracker.app:main"

[tool.setuptools.packages.find]
include = ["gold_tracker*"]
